update: BFS, MFS, 拓扑排序

--- a/Lecture06/code.ipynb
+++ b/Lecture06/code.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,19 +144,20 @@
     "            # 处理过的节点不要再处理\n",
     "            if wait_node not in selected_node:\n",
     "                selected_node.add(wait_node)\n",
-    "                queue.put(wait_node)\n"
+    "                queue.put(wait_node)\n",
+    "    print('')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "E C A B D F "
+      "E C A B D F \n"
      ]
     }
    ],
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,19 +206,20 @@
     "                stack.append(next_node)  # 拿到 stack 等待处理\n",
     "                print(next_node.val, end=' ')  # 处理时刻\n",
     "                selected_node.add(next_node)  # 处理后标记\n",
-    "                break  # 逮着一个就马上处理, 这才是 \"深度优先\"\n"
+    "                break  # 逮着一个就马上处理, 这才是 \"深度优先\"\n",
+    "    print('')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A B D E C "
+      "A B D E C \n"
      ]
     }
    ],
@@ -237,15 +239,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# [拓扑排序](https://www.nowcoder.com/practice/88f7e156ca7d43a1a535f619cd3f495c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "def get_input():\n",
+    "    node_num, _ = sys.stdin.readline().split()\n",
+    "    node_num = int(node_num)\n",
+    "\n",
+    "    # 下标就是节点, 值就是该节点的入度。\n",
+    "    nodes_ind = [0] * node_num\n",
+    "    # 下标就是节点, 值是该节点的邻接点集合。\n",
+    "    nodes_nexts = [[] for _ in range(node_num)]\n",
+    "\n",
+    "    for line in sys.stdin:\n",
+    "        fr, to = line.split()\n",
+    "        fr, to = int(fr)-1, int(to)-1  # 输入的节点是从 1 开始\n",
+    "        nodes_ind[to] += 1\n",
+    "        nodes_nexts[fr].append(to)\n",
+    "\n",
+    "    return nodes_ind, nodes_nexts\n",
+    "\n",
+    "\n",
+    "def topology(nodes_ind, nodes_nexts):\n",
+    "\n",
+    "    zero_nodes = []  # 存储入度为 0 的节点\n",
+    "    result = []  # 存储拓扑排序后的节点\n",
+    "\n",
+    "    # 初始化 zero_nodes\n",
+    "    for node, ind in enumerate(nodes_ind):\n",
+    "        if ind == 0:\n",
+    "            zero_nodes.append(node)\n",
+    "\n",
+    "    if len(zero_nodes) == 0:\n",
+    "        return []\n",
+    "\n",
+    "    while len(zero_nodes) != 0:\n",
+    "        node = zero_nodes.pop()\n",
+    "        result.append(node)\n",
+    "        for next_node in nodes_nexts[node]:\n",
+    "            nodes_ind[next_node] -= 1   # 消除该节点的入度影响\n",
+    "            if nodes_ind[next_node] == 0:   # 每次消除都应该会有新的节点入度为 0\n",
+    "                zero_nodes.append(next_node)\n",
+    "\n",
+    "    return result if len(result) == len(nodes_ind) else []\n",
+    "\n",
+    "\n",
+    "def main():# if __name__ == \"__main__\":\n",
+    "\n",
+    "    nodes_ind, nodes_nexts = get_input()\n",
+    "    result = topology(nodes_ind, nodes_nexts)\n",
+    "\n",
+    "    print(\n",
+    "        ' '.join(str(node+1) for node in result)\n",
+    "        if 0 != len(result) else \n",
+    "        '-1'\n",
+    "    )\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# TEST - 拓扑排序"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val\n",
+    "        self.ind = 0 # 入度\n",
+    "        self.nexts = [] # 邻接点 集合"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_graph(matrix):\n",
+    "    graph = Graph()\n",
+    "    for edge in matrix:\n",
+    "        fr, to = edge\n",
+    "        if fr not in graph.nodes:\n",
+    "            graph.nodes[fr] = Node(fr)\n",
+    "        if to not in graph.nodes:\n",
+    "            graph.nodes[to] = Node(to)\n",
+    "        fr_node, to_node = graph.nodes.get(fr), graph.nodes.get(to)\n",
+    "        fr_node.nexts.append(to_node)\n",
+    "        to_node.ind += 1\n",
+    "    return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def topology(graph):\n",
+    "    ind_map = {} # 存储各节点的入度\n",
+    "    zero_nodes = [] # 存储入度为 0 的节点\n",
+    "    result = [] # 存储排序后的节点值\n",
+    "    # 初始化 ind_map 和 zero_nodes\n",
+    "    for node in graph.nodes.values():\n",
+    "        ind_map[node] = node.ind\n",
+    "        if node.ind == 0:\n",
+    "            zero_nodes.append(node)\n",
+    "    if len(zero_nodes) == 0:\n",
+    "        return []\n",
+    "    while len(zero_nodes) != 0:\n",
+    "        node = zero_nodes.pop()\n",
+    "        result.append(node)\n",
+    "        for next_node in node.nexts:\n",
+    "            ind_map[next_node] -= 1  # 更新邻接点的入度\n",
+    "            if ind_map[next_node] == 0: \n",
+    "                zero_nodes.append(next_node) # 更新 zero_nodes\n",
+    "    \n",
+    "    return result if len(result) == len(ind_map) else []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C F D E B A "
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "    ['F', 'E'],\n",
+    "    ['F', 'D'],\n",
+    "    ['E', 'B'],\n",
+    "    ['D', 'B'],\n",
+    "    ['C', 'A'],\n",
+    "    ['C', 'B'],\n",
+    "    ['B', 'A'],\n",
+    "]\n",
+    "graph =generate_graph(matrix)\n",
+    "for node in topology(graph):\n",
+    "    print(node.val, end=' ')"
+   ]
   },
   {
    "attachments": {},
@@ -257,10 +415,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "        self.edges = set()\n",
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val \n",
+    "class Edge:\n",
+    "    def __init__(self, fr, to, w):\n",
+    "        self.fr = fr \n",
+    "        self.to = to \n",
+    "        self.w = w # 权值\n",
+    "    def __lt__(self, other):\n",
+    "        return self.w < other.w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [n1, n2, w] 双向边\n",
+    "def generate_graph(matrix):\n",
+    "    graph = Graph()\n",
+    "    for edge in matrix:\n",
+    "        n1, n2, w = edge \n",
+    "        if n1 not in graph.nodes:\n",
+    "            graph.nodes[n1] = Node(n1)\n",
+    "        if n2 not in graph.nodes:\n",
+    "            graph.nodes[n2] = Node(n2)\n",
+    "        # 获取节点\n",
+    "        n1_node, n2_node = graph.nodes.get(n1), graph.nodes.get(n2)\n",
+    "        # 创建边, 两条!\n",
+    "        e1, e2 = Edge(n1_node, n2_node, w), Edge(n2_node, n1_node, w)\n",
+    "        # 添加边, 两个节点都要!\n",
+    "        graph.edges.add(e1); graph.edges.add(e2)\n",
+    "    return graph\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kruskal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleUnionFind:\n",
+    "    def __init__(self, nodes):\n",
+    "        # key 是某个集合中的一个代表性节点, 随意\n",
+    "        # value 是节点集合, 表示这些节点都是同一个集合\n",
+    "        self.set_map = {}\n",
+    "        # 为每一个节点都创建一个集合, 此时每个节点都不连通\n",
+    "        for node in nodes:\n",
+    "            _set = set()\n",
+    "            _set.add(node)\n",
+    "            self.set_map[node] = _set\n",
+    "\n",
+    "    def is_same_set(self, fr, to):\n",
+    "        fr_set = self.set_map.get(fr)\n",
+    "        to_set = self.set_map.get(to)\n",
+    "        return fr_set == to_set\n",
+    "\n",
+    "    def union(self, fr, to):\n",
+    "        fr_set = self.set_map.get(fr)\n",
+    "        to_set = self.set_map.get(to)\n",
+    "        for to_node in to_set:\n",
+    "            fr_set.add(to_node)\n",
+    "            # 以后访问 to_set 中的每一个节点 to_node 时, 都是发现 to_node 和 fr_set 中的节点相同, 即属于同一个集合\n",
+    "            self.set_map[to_node] = fr_set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from queue import PriorityQueue\n",
+    "\n",
+    "def kruskal(graph):\n",
+    "    # 为图中每一个节点都生成属于自己的集合\n",
+    "    union_find = SimpleUnionFind(graph.nodes.values())\n",
+    "    # 优先级队列, 按权值从小到大顺序存储图的边\n",
+    "    priority_queue = PriorityQueue()\n",
+    "    for edge in graph.edges:\n",
+    "        priority_queue.put((edge))\n",
+    "    mst = set() # 生成树\n",
+    "    while not priority_queue.empty():\n",
+    "        # 每次取出最小边\n",
+    "        edge = priority_queue.get()\n",
+    "        # 判断该边是否会导致生成树成环\n",
+    "        if not union_find.is_same_set(edge.fr, edge.to):\n",
+    "            # 不成环, 可以添加该边。\n",
+    "            mst.add(edge)\n",
+    "            # 加入该边后, 要将两段节点合并为一个集合\n",
+    "            union_find.union(edge.fr, edge.to)\n",
+    "    return mst "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "    ['B', 'C', 3],\n",
+    "    ['A', 'B', 1],\n",
+    "    ['A', 'C', 2],\n",
+    "]\n",
+    "graph = generate_graph(matrix)\n",
+    "mst_edges = kruskal(graph)\n",
+    "for edge in mst_edges:\n",
+    "    print(edge.w)"
+   ]
   },
   {
    "attachments": {},
