--- a/Lecture06/code.ipynb
+++ b/Lecture06/code.ipynb
@@ -410,12 +410,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST - 最小生成树 MST"
+    "# [最小生成树 MST]()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \n",
+    "kruskal 算法, 核心在于 edge 的 fr, to 和 w 权值。 而节点只需要有个 val 就行。\n",
+    "算法步骤就是, 先将所有变存储在有序表中, 然后每次取出最小边, 判断该边是否导致成环。\n",
+    "判断成环的方法就是, 查看该边的两个端点是否是同一个集合, 如果不是, 则加入该边, 同时将两个端点的集合设置为同一个。\n",
+    "\n",
+    "由于题意只需要最低成本, 所以 \"加入该边\" 就是 \"加上该边的权值(成本)\" \n",
+    "而每户人家都是用数字表示, 所以可以利用数组下标作为每户的标识, 数组的值就是对应的集合。\n",
+    "初始时每户人家集合都不同, 所以可以直接将值设置为下标值。\n",
+    "当合并集合时, 就将两个元素的值修改为同一个**地址**即可。\n",
+    "    不过, 即使这样只不过是将哈希表的常数时间优化为数组的常数时间罢了, 时间复杂度还是很高的\n",
+    "\n",
+    "各路的权值是不变的, 所以存储边不一定得用有序表, 只要保证有序即可。\n",
+    "\"\"\"\n",
+    "class UnionFind:\n",
+    "    def __init__(self, house_num):\n",
+    "        # connected_house 的下标就是每户人家, 值为该户人家所在集合中的所有户人家, 初始时, 每个集合内只会自己, 并且不同户的集合不同(创建出的数组地址不同)\n",
+    "        self.connected_house = [[house] for house in range(house_num+1)] # 因为每户编号从 1 开始, 所以要加 1\n",
+    "\n",
+    "    def is_same_set(self, house1, house2):\n",
+    "        return self.connected_house[house1] == self.connected_house[house2]\n",
+    "\n",
+    "    def union(self, house1, house2):\n",
+    "        # 将两个集合合并时要注意, 不是简单的合并两户人家, 而是要确保两户人家所在集合中的每户人家都属于同一个集合\n",
+    "        \n",
+    "        house1_set = self.connected_house[house1]\n",
+    "        for house in self.connected_house[house2]:\n",
+    "            house1_set.append(house) # 先将 house2 所在集合的所有户人家添加到 house1 集合中\n",
+    "            self.connected_house[house] = house1_set # 同时将这些人家的集合重定位到 house1 集合中, 这样以后比较时才会认为这些集合内的人家是同一个集合。\n",
+    "\n",
+    "\n",
+    "\n",
+    "def kruskal(house_num, road_cost):\n",
+    "    union_find = UnionFind(house_num) # 并查集\n",
+    "    tco = 0 # 总成本\n",
+    "    # 对 road_cost 排序, 按成本从高到低排序, 因为我们会先取出最后一个。 \n",
+    "    ordered_road_cost = sorted(road_cost, key=lambda x: 0-x[2]) # road_cost 中每个元素为 [house1, house2, 修路成本]\n",
+    "    while 0 != len(ordered_road_cost):\n",
+    "        house1, house2, cost = ordered_road_cost.pop() # 每次取出最小的\n",
+    "        if not union_find.is_same_set(house1, house2): # 判断路两端的两户人家是否连通\n",
+    "            tco += cost # 不连通, 则修建这条路\n",
+    "            union_find.union(house1, house2) # 同时将这两户人家所在的两个集合连通。\n",
+    "    return tco"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TEST - 最小生成树 MST"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Kruskal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,14 +496,14 @@
     "    def __init__(self, fr, to, w):\n",
     "        self.fr = fr \n",
     "        self.to = to \n",
-    "        self.w = w # 权值\n",
+    "        self.w = w # 权值 \n",
     "    def __lt__(self, other):\n",
     "        return self.w < other.w"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,16 +526,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Kruskal"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,44 +570,196 @@
     "    # 优先级队列, 按权值从小到大顺序存储图的边\n",
     "    priority_queue = PriorityQueue()\n",
     "    for edge in graph.edges:\n",
-    "        priority_queue.put((edge))\n",
-    "    mst = set() # 生成树\n",
+    "        priority_queue.put(edge)\n",
+    "    mst_edges = set() # 生成树\n",
     "    while not priority_queue.empty():\n",
     "        # 每次取出最小边\n",
     "        edge = priority_queue.get()\n",
     "        # 判断该边是否会导致生成树成环\n",
     "        if not union_find.is_same_set(edge.fr, edge.to):\n",
     "            # 不成环, 可以添加该边。\n",
-    "            mst.add(edge)\n",
+    "            mst_edges.add(edge)\n",
     "            # 加入该边后, 要将两段节点合并为一个集合\n",
     "            union_find.union(edge.fr, edge.to)\n",
-    "    return mst "
+    "    return mst_edges "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n"
+      "16\n"
      ]
     }
    ],
    "source": [
-    "matrix = [\n",
-    "    ['B', 'C', 3],\n",
-    "    ['A', 'B', 1],\n",
-    "    ['A', 'C', 2],\n",
-    "]\n",
-    "graph = generate_graph(matrix)\n",
-    "mst_edges = kruskal(graph)\n",
-    "for edge in mst_edges:\n",
-    "    print(edge.w)"
+    "road_cost = [[5,3,8],[1,3,6],[2,5,4],[2,3,5],[4,5,6],[3,4,3],[2,4,8],[1,2,2],[1,4,5],[5,6,2]]\n",
+    "graph = generate_graph(road_cost)\n",
+    "tco = 0\n",
+    "for edge in kruskal(graph):\n",
+    "    tco += edge.w \n",
+    "print(tco)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prim "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val # 值还是保存着, 虽然没什么用。\n",
+    "        self.edges = []\n",
+    "class Edge:\n",
+    "    def __init__(self, to, w): # Prim 算法不在乎这条边的 from 点, 只在乎 to 点\n",
+    "        self.to = to \n",
+    "        self.w = w # 权值 \n",
+    "    def __lt__(self, other):\n",
+    "        return self.w < other.w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [n1, n2, w] 双向边\n",
+    "def generate_graph(matrix):\n",
+    "    graph = Graph()\n",
+    "    for edge in matrix:\n",
+    "        n1, n2, w = edge \n",
+    "        if n1 not in graph.nodes:\n",
+    "            graph.nodes[n1] = Node(n1)\n",
+    "        if n2 not in graph.nodes:\n",
+    "            graph.nodes[n2] = Node(n2)\n",
+    "        # 获取节点\n",
+    "        n1_node, n2_node = graph.nodes.get(n1), graph.nodes.get(n2)\n",
+    "        # 创建边, 两条!\n",
+    "        e1, e2 = Edge(n1_node, w), Edge(n2_node, w)\n",
+    "        # 添加边, n1 要有指向 n2 的边, n2 要有指向 n1 的边\n",
+    "        n1_node.edges.append(e2); n2_node.edges.append(e1)\n",
+    "    return graph\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from queue import PriorityQueue\n",
+    "\n",
+    "def prim(graph):\n",
+    "    pq = PriorityQueue() # 存储被解锁(可供选择)的边, 可以按从小到大次序取出\n",
+    "    mst_nodes_set = set() # 存储 MST 节点\n",
+    "    mst_edges_set = set() # 存储 MST 边\n",
+    "\n",
+    "    for node in graph.nodes.values(): # 这个 for 循环是处理 graph 中存在多片不连通的区域的情况\n",
+    "        if node not in mst_nodes_set:\n",
+    "\n",
+    "            mst_nodes_set.add(node) # 随机添加一个点\n",
+    "            for edge in node.edges:\n",
+    "                pq.put(edge)  # 添加一个点后, 将会解锁一些边\n",
+    "            \n",
+    "            # 以该边为起始, 依次将所有可连通的节点依次添加进 MST\n",
+    "            while not pq.empty():\n",
+    "                edge = pq.get() # 每次取出一条权值最小的边\n",
+    "                to_node = edge.to\n",
+    "                if to_node not in mst_nodes_set: # 要求该边的 to 端不是 mst 内部的节点\n",
+    "                    mst_nodes_set.add(to_node)\n",
+    "                    mst_edges_set.add(edge)\n",
+    "                    # 新增一个点, 解锁一些边。 虽然可能会加入一些已经被选取的边, 但不影响结果。 只是常数时间稍微慢了点\n",
+    "                    for new_edge in to_node.edges:\n",
+    "                        pq.put(new_edge)\n",
+    "    return mst_edges_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "road_cost = [[5,3,8],[1,3,6],[2,5,4],[2,3,5],[4,5,6],[3,4,3],[2,4,8],[1,2,2],[1,4,5],[5,6,2]]\n",
+    "graph = generate_graph(road_cost)\n",
+    "tco = 0\n",
+    "for edge in prim(graph):\n",
+    "    tco += edge.w \n",
+    "print(tco)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [Dijkstra 算法最短路径](https://www.nowcoder.com/practice/7c1740c3d4ba4b3486df4847ee6e8fc7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import heapq\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def run(start=1):\n",
+    "\n",
+    "    find, m = map(int, input().split())\n",
+    "    node_nexts = [[] for _ in range(5001)]\n",
+    "    for _ in range(m):  # 输出的条数有大于 m 的情况\n",
+    "        n1, n2, w = map(int, input().split())\n",
+    "        node_nexts[n1].append((n2, w))\n",
+    "        node_nexts[n2].append((n1, w))\n",
+    "\n",
+    "    \"\"\" dijkstra \"\"\"\n",
+    "    dist = [None] * 5001\n",
+    "    dist[start] = 0\n",
+    "    heap = [[0, 1]]  # [邻接点距离, 邻接点]\n",
+    "    while len(heap):\n",
+    "        min_dist, min_node = heapq.heappop(heap)\n",
+    "\n",
+    "        if min_node == find:\n",
+    "            print(min_dist)\n",
+    "            return\n",
+    "\n",
+    "        for next_node, next_dist in node_nexts[min_node]:\n",
+    "            old_dist = dist[next_node]\n",
+    "            new_dist = min_dist + next_dist\n",
+    "            if old_dist is None or new_dist < old_dist:\n",
+    "                dist[next_node] = new_dist\n",
+    "                heapq.heappush(heap, [dist[next_node], next_node])\n",
+    "    print(-1)\n"
    ]
   },
   {
@@ -562,10 +772,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "        self.edges = set()\n",
+    "class Node:\n",
+    "    def __init__(self, val):\n",
+    "        self.val = val \n",
+    "        self.edges = []\n",
+    "class Edge:\n",
+    "    def __init__(self, to, w):\n",
+    "        self.to = to\n",
+    "        self.w = w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_graph(matrix):\n",
+    "    graph = Graph()\n",
+    "    for n1, n2, w in matrix: # 无向边\n",
+    "        if n1 not in graph.nodes:\n",
+    "            graph.nodes[n1] = Node(n1)\n",
+    "        if n2 not in graph.nodes:\n",
+    "            graph.nodes[n2] = Node(n2)\n",
+    "        n1_node, n2_node = graph.nodes.get(n1), graph.nodes.get(n2)\n",
+    "        e1, e2 = Edge(n1_node, w), Edge(n2_node, w)\n",
+    "        graph.edges.add(e1); graph.edges.add(e2)\n",
+    "        n1_node.edges.append(e2); n2_node.edges.append(e1)\n",
+    "    return graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dijkstra(start):\n",
+    "    distance_map = {}  # 存储 start 节点到其他所有节点的最短距离, 没有该节点则表示距离是无穷大\n",
+    "    distance_map[start] = 0  # 到自己的距离是 0\n",
+    "    lock_node_set = set()  # 因为距离没有负值, 所以已确定的最短距离是不会再改变的\n",
+    "\n",
+    "    shorted_node = get_shorted_but_unlock_node(distance_map, lock_node_set)\n",
+    "\n",
+    "    while shorted_node is not None:  # 当 distance_map 中的每个节点都被锁定时, shorted_node 将会是 None\n",
+    "        # 每次选出的最短距离节点, 都代表该节点的距离不会再变短了, 所以可以锁定。\n",
+    "        # 但在锁定前, 要利用这个最短距离, 计算出下一个最短距离, 即更新其他节点的最短距离\n",
+    "        distance = distance_map[shorted_node]\n",
+    "\n",
+    "        for edge in shorted_node.edges:\n",
+    "            old_distance = distance_map.get(edge.to)\n",
+    "            new_distance = distance + edge.w  # 利用 shorted_node 为跳板所计算出的新距离\n",
+    "            # 如果边的 to 端节点不在 distance_map 中, 表示 to 节点的距离是无穷, 所以无需与旧值比较, 直接更新\n",
+    "            if old_distance is None or new_distance < old_distance:\n",
+    "                distance_map[edge.to] = new_distance\n",
+    "        # 利用完这个最短距离节点后, 就将其锁定, 然后获取下一个最短距离节点\n",
+    "        lock_node_set.add(shorted_node)\n",
+    "        shorted_node = get_shorted_but_unlock_node(distance_map, lock_node_set)\n",
+    "    return distance_map\n",
+    "\n",
+    "\n",
+    "def get_shorted_but_unlock_node(distance_map, lock_node_set):\n",
+    "    shorted_node = None\n",
+    "    for node in distance_map:\n",
+    "        if (node not in lock_node_set) and (shorted_node is None or distance_map[node] < distance_map[shorted_node]):\n",
+    "            shorted_node = node\n",
+    "    return shorted_node\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "['1','2',3],\n",
+    "['2','4',7],\n",
+    "['3','4',5],\n",
+    "['3','1',3],\n",
+    "]\n",
+    "graph =generate_graph(matrix)\n",
+    "distance_map = dijkstra(graph.nodes.get('1'))\n",
+    "print(distance_map.get(graph.nodes.get('4')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 0\n",
+      "B 3\n",
+      "C 5\n",
+      "D 9\n",
+      "E 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = [\n",
+    "    ['A', 'B', 3],\n",
+    "    ['A', 'C', 15],\n",
+    "    ['A', 'D', 9],\n",
+    "    ['B', 'C', 2],\n",
+    "    ['D', 'C', 7],\n",
+    "    ['D', 'E', 16],\n",
+    "    ['C', 'E', 14],\n",
+    "    ['B', 'E', 200],\n",
+    "]\n",
+    "graph = generate_graph(matrix)\n",
+    "distance_map = dijkstra(graph.nodes.get('A'))\n",
+    "for to in distance_map:\n",
+    "    print(to.val, distance_map.get(to))"
+   ]
   }
  ],
  "metadata": {
