update: 完善 Dijkstra 笔记

--- a/Lecture06/code.ipynb
+++ b/Lecture06/code.ipynb
@@ -736,29 +736,29 @@
     "def run(start=1):\n",
     "\n",
     "    find, m = map(int, input().split())\n",
-    "    node_nexts = [[] for _ in range(5001)]\n",
+    "    node_nexts = [[] for _ in range(5001)] # 存储每个节点的邻接点 nexts 和到邻接点的距离 \n",
     "    for _ in range(m):  # 输出的条数有大于 m 的情况\n",
     "        n1, n2, w = map(int, input().split())\n",
     "        node_nexts[n1].append((n2, w))\n",
     "        node_nexts[n2].append((n1, w))\n",
     "\n",
     "    \"\"\" dijkstra \"\"\"\n",
-    "    dist = [None] * 5001\n",
-    "    dist[start] = 0\n",
-    "    heap = [[0, 1]]  # [邻接点距离, 邻接点]\n",
-    "    while len(heap):\n",
-    "        min_dist, min_node = heapq.heappop(heap)\n",
+    "    dist_table = [None] * 5001 # 节点数最多是 5000, 并且节点编号是递增的\n",
+    "    dist_table[start] = 0\n",
+    "    wait_table = [[0, 1]]  # [邻接点距离, 邻接点], 因为要排序, 所以将距离放在首位。\n",
+    "    while len(wait_table) != 0:\n",
+    "        to_dist, to = heapq.heappop(wait_table)\n",
     "\n",
-    "        if min_node == find:\n",
-    "            print(min_dist)\n",
+    "        if to == find:\n",
+    "            print(to_dist)\n",
     "            return\n",
     "\n",
-    "        for next_node, next_dist in node_nexts[min_node]:\n",
-    "            old_dist = dist[next_node]\n",
-    "            new_dist = min_dist + next_dist\n",
+    "        for next_node, next_dist in node_nexts[to]:\n",
+    "            old_dist = dist_table[next_node]\n",
+    "            new_dist = to_dist + next_dist\n",
     "            if old_dist is None or new_dist < old_dist:\n",
-    "                dist[next_node] = new_dist\n",
-    "                heapq.heappush(heap, [dist[next_node], next_node])\n",
+    "                dist_table[next_node] = new_dist\n",
+    "                heapq.heappush(wait_table, [new_dist, next_node])\n",
     "    print(-1)\n"
    ]
   },
