POTD: Easy❌ Mother Vertex

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -71,6 +71,7 @@
     - [Easy 能遍历到的叶子节点个数](https://practice.geeksforgeeks.org/problems/leaf-under-budget/1)
 
 - 图
+    - [❌Easy 图的“根节点”](https://practice.geeksforgeeks.org/problems/mother-vertex/1)
     - [Medium 最短路径 Dijkstra](https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph/1)
     - [Easy BFS](https://practice.geeksforgeeks.org/problems/bfs-traversal-of-graph/1)
     - [Easy DFS](https://practice.geeksforgeeks.org/problems/depth-first-traversal-for-a-graph/1)
