--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -72,6 +72,7 @@
 
 - 图
     - [❌Easy 图的“根节点”](https://practice.geeksforgeeks.org/problems/mother-vertex/1)
+    - [❌Medium 最少需要多少步才能从 start 走到 end](https://practice.geeksforgeeks.org/problems/minimum-multiplications-to-reach-end/1)
     - [Medium 最短路径 Dijkstra](https://practice.geeksforgeeks.org/problems/shortest-path-in-undirected-graph/1)
     - [Easy BFS](https://practice.geeksforgeeks.org/problems/bfs-traversal-of-graph/1)
     - [Easy DFS](https://practice.geeksforgeeks.org/problems/depth-first-traversal-for-a-graph/1)
