POTD: Easy❌ Binary Tree to BST

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -61,6 +61,7 @@
 - 二叉树
     - [×Hard 在 AVL 树上删除节点](https://practice.geeksforgeeks.org/problems/avl-tree-deletion/1)
     - [❌Easy 同构树](https://practice.geeksforgeeks.org/problems/check-if-tree-is-isomorphic/1)
+    - [❌Easy 转换为 BST](https://practice.geeksforgeeks.org/problems/binary-tree-to-bst/1)
     - [Medium 打印树两端节点](https://practice.geeksforgeeks.org/problems/leftmost-and-rightmost-nodes-of-binary-tree/1)
     - [Medium 寻找某节点的第 K 个祖先节点](https://practice.geeksforgeeks.org/problems/kth-ancestor-in-a-tree/1)
     - [Easy 二叉树每层最右节点](https://practice.geeksforgeeks.org/problems/right-view-of-binary-tree/1)
