--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -70,6 +70,7 @@
     - [Easy 螺旋/蛇形 层级遍历二叉树](https://practice.geeksforgeeks.org/problems/level-order-traversal-in-spiral-form/1)
     - [Easy 搜索二叉树 BST 中序遍历的后继节点](https://practice.geeksforgeeks.org/problems/inorder-successor-in-bst/1)
     - [Easy 能遍历到的叶子节点个数](https://practice.geeksforgeeks.org/problems/leaf-under-budget/1)
+    - [Easy 搜索二叉树 BST 中第 k 大节点](https://practice.geeksforgeeks.org/problems/kth-largest-element-in-bst/1)
 
 - 图
     - [❌Easy 图的“根节点”](https://practice.geeksforgeeks.org/problems/mother-vertex/1)
