POTD: Easy. Insert a node in a BST

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -71,6 +71,7 @@
     - [Easy 搜索二叉树 BST 中序遍历的后继节点](https://practice.geeksforgeeks.org/problems/inorder-successor-in-bst/1)
     - [Easy 能遍历到的叶子节点个数](https://practice.geeksforgeeks.org/problems/leaf-under-budget/1)
     - [Easy 搜索二叉树 BST 中第 k 大节点](https://practice.geeksforgeeks.org/problems/kth-largest-element-in-bst/1)
+    - [Easy 搜索二叉树 BST 插入节点]([Title](https://practice.geeksforgeeks.org/problems/insert-a-node-in-a-bst/1))
 
 - 图
     - [❌Easy 图的“根节点”](https://practice.geeksforgeeks.org/problems/mother-vertex/1)
