POTD: Easy. Perfect Numbers

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -14,6 +14,7 @@
     - [Medium 卡特兰数](https://practice.geeksforgeeks.org/problems/nth-catalan-number0817/1)
     - [Easy 斐波那契数列](https://practice.geeksforgeeks.org/problems/nth-fibonacci-number1335/1)
     - [Easy Lucky Numbers](https://practice.geeksforgeeks.org/problems/lucky-numbers2911/1)
+    - [Easy 完美数字](https://practice.geeksforgeeks.org/problems/perfect-numbers3207/1)
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
