POTD: Easy. Largest number possible

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -15,6 +15,7 @@
     - [Easy 斐波那契数列](https://practice.geeksforgeeks.org/problems/nth-fibonacci-number1335/1)
     - [Easy Lucky Numbers](https://practice.geeksforgeeks.org/problems/lucky-numbers2911/1)
     - [Easy 完美数字](https://practice.geeksforgeeks.org/problems/perfect-numbers3207/1)
+    - [Easy Largest number possible](https://practice.geeksforgeeks.org/problems/largest-number-possible5028/1)
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
