POTD: Medium❌ Perfect Sum Problem

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -101,3 +101,4 @@
     - [❌Medium 凑零钱 Coin Change](https://practice.geeksforgeeks.org/problems/coin-change2448/1)
     - [Medium 01背包](https://practice.geeksforgeeks.org/problems/0-1-knapsack-problem0945/1)
     - [Easy 字符串全排列](https://practice.geeksforgeeks.org/problems/permutations-of-a-given-string-1587115620/1)
+    - [❌Medium Perfect Sum Problem](https://practice.geeksforgeeks.org/problems/perfect-sum-problem5633/1)
