POTD: Medium. Partition Equal Subset Sum

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -2,7 +2,7 @@
 
 标了 ❌ 的说明是第一次做不出来的，没标 ❌ 的也不代表现在还能在规定时间内做出来。
 
-- 基本题型
+- 难以分类的题型
     - [School 最大公约数 gcd](https://practice.geeksforgeeks.org/problems/gcd-of-two-numbers3459/0)
     - [Medium 最大质因数](https://practice.geeksforgeeks.org/problems/largest-prime-factor2601/1)
     - [School 偶数求幂](https://practice.geeksforgeeks.org/problems/power-of-pow-even-number5440/1?page=4&difficulty[]=-2&sortBy=submissions)
@@ -16,6 +16,7 @@
     - [Easy Lucky Numbers](https://practice.geeksforgeeks.org/problems/lucky-numbers2911/1)
     - [Easy 完美数字](https://practice.geeksforgeeks.org/problems/perfect-numbers3207/1)
     - [Easy Largest number possible](https://practice.geeksforgeeks.org/problems/largest-number-possible5028/1)
+    - [Medium 将数组划分为元素和相等的两个子集](https://practice.geeksforgeeks.org/problems/subset-sum-problem2014/1)
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
