--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -18,6 +18,8 @@
     - [Easy Largest number possible](https://practice.geeksforgeeks.org/problems/largest-number-possible5028/1)
     - [Medium 将数组划分为元素和相等的两个子集](https://practice.geeksforgeeks.org/problems/subset-sum-problem2014/1)
     - [青蛙跳(123)方法数](https://practice.geeksforgeeks.org/problems/count-number-of-hops-1587115620/1)
+    - [简单 - 罗马转数字](https://leetcode.cn/problems/roman-to-integer/submissions/)
+    - [中等 - 数字转罗马](https://leetcode.cn/problems/integer-to-roman/submissions/)
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
