POTD: Basic. Rotate Bits

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -9,6 +9,7 @@
     - [School 奇数求幂](https://practice.geeksforgeeks.org/problems/power-of-pow-odd-numbers1103/1?page=5&difficulty[]=-2&sortBy=submissions)
     - [Basic 是否是2的幂](https://practice.geeksforgeeks.org/problems/power-of-2-1587115620/1)
     - [Easy 二进制最右的 1 下标](https://practice.geeksforgeeks.org/problems/find-first-set-bit-1587115620/1)
+    - [Basic 循环位移](https://practice.geeksforgeeks.org/problems/rotate-bits4524/1)
     - [Medium 计算阶乘](https://practice.geeksforgeeks.org/problems/power-of-numbers-1587115620/1)
     - [Medium 两个数字相乘](https://practice.geeksforgeeks.org/problems/multiply-two-strings/1)
     - [Easy 巧克力分配时的最大差值](https://practice.geeksforgeeks.org/problems/chocolate-distribution-problem3825/1)
