POTD: Medium. First and last occurrences of x

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -27,6 +27,7 @@
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
+    - [Medium 在有序数组中确定某数值边界](https://practice.geeksforgeeks.org/problems/first-and-last-occurrences-of-x3116/1)
 
 - 排序
     - [Medium 快排](https://practice.geeksforgeeks.org/problems/quick-sort/1)
