--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -25,6 +25,7 @@
     - [简单 - 罗马转数字](https://leetcode.cn/problems/roman-to-integer/submissions/)
     - [中等 - 数字转罗马](https://leetcode.cn/problems/integer-to-roman/submissions/)
     - [Easy 数组的平衡点](https://practice.geeksforgeeks.org/problems/equilibrium-point-1587115620/1)
+    - [Easy 数组中的重复数字](https://practice.geeksforgeeks.org/problems/find-duplicates-in-an-array/1)
 
 - 二分
     - [Easy 二分查找](https://practice.geeksforgeeks.org/problems/number-of-occurrence2259/1)
