POTD: Easy. Find the closest pair from two arrays

--- a/算法题型积累.md
+++ b/算法题型积累.md
@@ -50,6 +50,7 @@
     - [Easy 元素大于右边的每一个元素](https://practice.geeksforgeeks.org/problems/leaders-in-an-array-1587115620/1)
     - [❌Medium 前 K 个两个数组的最大和](https://practice.geeksforgeeks.org/problems/maximum-sum-combination/1)
     - [❌Medium 找出任意四个元素之和等于给定数字](https://practice.geeksforgeeks.org/problems/find-all-four-sum-numbers1732/1)
+    - [Easy 从两个数组中找出最接近给定值的两个元素](https://practice.geeksforgeeks.org/problems/find-the-closest-pair-from-two-arrays4215/1)
 
 - 窗口问题/双指针
     - [Easy 子数组和等于给定数字](https://practice.geeksforgeeks.org/problems/subarray-with-given-sum-1587115621/1)
